# practical_deep_learning_for_coders

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
lecture_1/: Is_it_a_bird.ipynb  is_it_a_bird_original.ipynb
src/practical_deep_learning/common/: load_data.py  search_images.py
src/practical_deep_learning/deployment/PracticalDeepLearningForCoders/: README.md  app.py  requirements.txt
src/practical_deep_learning/graph_estimation/: data_creation.ipynb  train.ipynb  train_v1.ipynb  train_v2.ipynb  train_v3.ipynb  training.ipynb
src/practical_deep_learning/lecture_1/: is_it_a_bird.ipynb  is_it_a_bird.py  is_it_a_bird_original.ipynb
tests/common/: load_data_test.py  search_images_test.py
